--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -1,16 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
-.navbar-transparent {
-    background: transparent;
+.navbar {
+    background: rgba(0, 0, 0, 0.6);
     color: #fff;
     transition: .5s ease-out;
     height: auto;
   
-  }
-  .navbar-black {
-    background: #fff;
-    color: #000!important;
-    transition: .5s ease-out;
-    height: auto;
   }
   .logo-container {
     width: 10%;
@@ -23,14 +17,13 @@
   }
   .navLink{
     font-family: 'Poppins', sans-serif;
-    padding: 2px 10px;
-    font-weight: 900;
+    color: #fff;
     text-decoration: none;
+    margin-left: 5px;
   }
   .navLink:hover {
     opacity: .8;
   }
-
 @media screen and (max-width: 768px) {
     #logo {
         height: 500px;
