--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,10 @@ p {
   transform: scale(1.05);
   transition: 0.5s;
 }
+.equals {
+  font-size: 2.5em;
+  font-weight: 900;
+}
 @media screen and (max-width: 768px) {
   .home-hero {
     height: 70vh;
